--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     padding: 120px 70px;
     justify-content: space-between;
-    /* align-items: flex-start; */
+    align-items: flex-start;
 }
 
 .sec-contact .text {
@@ -120,6 +120,49 @@
     font-size: 20px;
     line-height: 24px;
 }
+
+.sec-contact .contact-modal {
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.sec-contact .contact-modal .overlay {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(72, 72, 72, 0.49);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sec-contact .contact-modal .overlay .modal-content {
+    display: flex;
+    flex-direction: column;
+    padding: 64px 100px;
+    background-color: #fff;
+    border: 1px solid #1EABE3;
+    border-radius: 30px;
+    width: 400px;
+    height: 175px;
+    box-sizing: border-box;
+
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 48px;
+    color: #3D3C3C;
+}
+.sec-contact .contact-modal .overlay .modal-content a {
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 18px;
+    color: rgba(30, 171, 227, 0.86);
+    margin-top: 20px;
+}
+
 
 @media screen and (max-width: 1200px) {
     .sec-contact {
@@ -240,5 +283,16 @@
         font-weight: 500;
         font-size: 16px;
         line-height: 24px;
+    }
+    .sec-contact .contact-modal .overlay .modal-content {
+        padding: 16px 24px;
+        border-radius: 20px;
+        width: 250px;
+        height: 100px;
+        font-size: 24px;
+    }
+    .sec-contact .contact-modal .overlay .modal-content a {
+        font-size: 12px;
+        margin-top: 4px;
     }
 }
