--- a/src/components/styles/mob-navbar.css
+++ b/src/components/styles/mob-navbar.css
@@ -28,21 +28,32 @@
         display: flex;
         flex-direction: column;
         align-items: end;
-        /* margin-left: auto; */
     }
+
     .mob-navbar .layout {
         position: fixed;
+        top: 0px;
+        left: 0px;
         width: 100vw;
         height: 100vh;
-        background-color: rgba(0, 0, 0, .4);
+        background-color: rgba(0, 0, 0, .2);
         
-        /* opacity: .4; */
         z-index: 1;
     }
+
     .mob-navbar .active-menu {
+        position: absolute;
+        top: 20px;
+        right: -170px;
         background-color: #fff;
-        padding-bottom: 24px;
-        width: 100vw;
+        width: 170px;
+        padding: 0 12px;
+        box-sizing: border-box;
+        transition:  400ms ease-in-out;
+    }
+    .mob-navbar .active-menu.active {
+        right: 0;
+        z-index: 2;
     }
     .active-menu ul {
         margin: 0;
@@ -59,7 +70,7 @@
         /* background-color: aqua; */
         width: 100%;
         padding: 12px 0;
-        border-bottom: 1px solid #3D3C3C;
+        border-bottom: 1px solid rgba(72, 72, 72, 0.07);;
     }
     .active-menu ul li.close-menu img {
         width: 24px;
@@ -71,7 +82,7 @@
         color: #3D3C3C;
         text-decoration: none;
         width: 100%;
-        text-align: center;
+        text-align: start;
     }
     .active-menu .language {
         display: flex;
@@ -89,5 +100,15 @@
         width: 24px;
         height: 24px;
         margin: 0 8px;
+    }
+
+    .side {
+        width: 170px; 
+        height: 200px;
+        position: absolute;
+        top: 0;
+        color:black;
+        background-color: #fff;
+        transition: 0.5s ease
     }
 }
