--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -27,11 +27,16 @@
     margin-top: 0px;
     padding: 0;
     /* background-color: blanchedalmond; */
+    height: 24px;
+    box-sizing: border-box;
 }
 
 .navbar ul li {
     list-style: none;
     margin-right: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .navbar li a {
