--- a/src/components/styles/home2.css
+++ b/src/components/styles/home2.css
@@ -53,16 +53,15 @@
     font-weight: 700;
     font-size: 45px;
     line-height: 54px;
-    margin:0;
+    margin-bottom: 24px;
 }
-
+ 
 .sec-home .text3 h3 {
     font-family: 'SF Pro Display';
     font-style: normal;
     font-weight: 700;
     font-size: 45px;
     line-height: 54px;
-    margin:0;
     margin-bottom: 32px;
 }
 
@@ -93,6 +92,7 @@
     font-size: 24px;
     line-height: 40px;
     width: 60%;
+    margin-bottom: 40px;
 }
 
 .sec-home .text3 p {
@@ -148,7 +148,7 @@
     .sec-home {
         margin: 0;
         padding: 0;
-        height: 70vh;
+        height: 60vh;
     }
     .sec-home .hero {
         background-image: url(../images/hero-mob1.jpg);
@@ -192,6 +192,7 @@
         font-weight: 600;
         font-size: 16px;
         line-height: 19px;
+        margin-bottom: 12px;
     }
     
     .sec-home .text3 h3 {
@@ -228,6 +229,7 @@
         font-weight: 400;
         font-size: 12px;
         line-height: 14px;
+        margin-bottom: 24px;
     }
     
     .sec-home .text3 p {
