--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -20,9 +20,6 @@
     align-items: flex-start;
     margin-left: 22px;
 }
-.sec-footer .mob {
-    display: none;
-}
 .sec-footer .widget1 .socials {
     margin-left: 26px;
     margin-top: 24px;
@@ -139,11 +136,13 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .sec-footer .desk {
-        display: none;
+    .sec-footer img {
+        width: 12px;
+        height: 12px;
     }
-    .sec-footer .mob {
-        display: block;
+    .sec-footer .logo {
+        width: 80px;
+        height: auto;
     }
     .sec-footer .top-part .widgets-1-2 {
         display: flex;
@@ -153,14 +152,14 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin-left: 10px;
+        margin-left: 0px;
         margin-top: 12px;
     }
     .sec-footer .widget1 .socials a {
         margin-right: 8px;
     }
     .sec-footer .widget2 {
-        margin-left: 30px;
+        margin-left: 24px;
         color: #fff;
         /* background-color: antiquewhite; */
     }
