--- a/src/components/styles/home2.css
+++ b/src/components/styles/home2.css
@@ -69,9 +69,9 @@
     font-family: 'SF Pro Display';
     font-style: normal;
     font-weight: 700;
-    font-size: 40px;
+    font-size: 38px;
     line-height: 48px;
-    margin:0;
+    margin-bottom: 16px;
 }
 
 .sec-home .text p {
@@ -208,8 +208,9 @@
         font-family: 'SF Pro Display';
         font-style: normal;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 14px;
         line-height: 14px;
+        margin-bottom: 8px;
     }
     
     .sec-home .text p {
