--- a/src/components/styles/mob-navbar.css
+++ b/src/components/styles/mob-navbar.css
@@ -23,6 +23,9 @@
         justify-content: space-between;
         margin-bottom: 12px;
     }
+    .mob-navbar .mob-logo img.logo {
+        width: 150px;
+    }
 
     .mob-navbar .menu {
         display: flex;
