--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -9,13 +9,14 @@
     justify-content: space-between;
     z-index: 2;
     direction: ltr !important;
+    padding: 0 45px;
+    box-sizing: border-box;
 }
 .nav-conainer {
     display: flex;
     flex-direction: row;
     align-items: center;
     list-style: none;
-    margin-right: 48px;
     /* background-color: aqua; */
 }
 .navbar .menu {
